syntax = "proto3";

package payment;

option go_package = "payment/";

import "google/protobuf/wrappers.proto";

service PaymentService {
  rpc Deposit(DepositRequest) returns (DepositResponse);
  rpc Withdraw(WithDrawRequest) returns (WithDrawResponse);
  rpc Hold(HoldRequest) returns (HoldResponse);
  rpc Pay(PayRequest) returns (PayResponse);
  rpc CompleteRent(CompleteRentRequest) returns (CompleteRentResponse);
}

message DepositRequest {
  int64 user_id = 1;
  google.protobuf.StringValue amount = 2;
}

message DepositResponse {
  bool success = 1;
}

message WithDrawRequest {
  int64 user_id = 1;
  google.protobuf.StringValue amount = 2;
}

message WithDrawResponse {
  bool success = 1;
}

message HoldRequest {
  int64 user_id = 1;
  int64 rent_id = 2;
  google.protobuf.StringValue amount = 3;
}

message HoldResponse {
  bool success = 1;
}

message PayRequest {
  int64 user_id = 1;
  int64 landlord_id = 2;
  int64 rent_id = 3;
  google.protobuf.StringValue rent_amount = 4;
  google.protobuf.StringValue pledge_amount = 5;
}

message PayResponse {
  bool success = 1;
}

message CompleteRentRequest {
  int64 rent_id = 1;
  bool to_landlord = 2;
}

message CompleteRentResponse {
  bool success = 1;
}
